# flow-cli

./: .gitignore  GOALS.md  README.md  pyproject.toml  requirements.txt
autonorm/: auto_norm.py  error.txt  test.c
fart/: aliases.py  commands.py  config.py  launcher.py  main.py  modules.py  output.py  setup.py  utils.py
fart/autonorm/: auto_norm.py  error.json  test.c
fart/subcommands/: add_module.py  aliases.py  check.py  compile.py  config.py  debugtest.py  fart.py  fetch.py  meow.py  module.py  setup.py  test.py  watch.py
fart/test/: tester.py  types.py
fart/testers/: c_reimpl.c
fart/testers/c_piscine/c00/ex00/: inputs.txt  tester.json
fart/testers/c_piscine/c00/ex01/: tester.json
fart/testers/c_piscine/c00/ex02/: tester.json
fart/testers/c_piscine/c00/ex03/: tester.json
fart/testers/c_piscine/c00/ex04/: inputs.txt  tester.json
fart/testers/c_piscine/c00/ex05/: tester.json
fart/testers/c_piscine/c00/ex06/: tester.json
fart/testers/c_piscine/c00/ex07/: tester.json
fart/testers/c_piscine/c00/ex08/: tester.json
fart/testers/c_piscine/c01/ex00/: tester.json
fart/testers/c_piscine/c01/ex02/: inputs.txt
fart/testers/c_piscine/c01/ex03/: tester.json
fart/testers/c_piscine/c01/ex05/: inputs.txt  tester.json
fart/testers/c_piscine/c01/ex06/: inputs.txt  tester.json
fart/utils/: __init__.py  colors.py  inquirer.py  log.py  norminette.py  strings.py
fart/watch/: watch.py
flow/: commands.py  config.py  launcher.py  main.py  modules.py  output.py  setup.py
flow/autonorm/: error.json
flow/subcommands/: aliases.py  check.py  compile.py  config.py  fart.py  meow.py  module.py  setup.py  test.py  watch.py
flow/test/: tester.py
flow/utils/: __init__.py  inquirer.py  log.py  norminette.py
(+13 files in other folders)
