[project]
name = "fart"
version = "0.0.2"
description = "tbd"
authors = [
    {name = "kroussar", email="oss@xtrm.me"},
    {name = "ylasbord"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["toml", "argparse", "inquirer", "xdg-base-dirs", "norminette"]

[project.scripts]
fart = "fart.launcher:main"

[project.urls]
"Homepage" = "https://github.com/xtrm-en/fart"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"