[project]
name = "flow"
version = "0.0.3"
description = "a multi-purpose command-line tool for 42"
authors = [
    {name = "kroussar", email="oss@xtrm.me"},
    {name = "ylasbord"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["toml", "argparse", "inquirer", "xdg-base-dirs", "norminette"]

[project.scripts]
flow = "flow.launcher:main"

[project.urls]
"Homepage" = "https://github.com/xtrm-en/flow-cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"